--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -529,6 +529,8 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Test</button>
 
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 
 <router-outlet></router-outlet>
