feature_AuthChanges: Changes related autologin and related to wildcard routes

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,6 +13,9 @@
                                         </div>
                                         <!-- /.login-reg-icon -->
                                         <h3>Login to your account</h3>
+                                        <div class="textcenter">
+                                            <span *ngIf="showAuthError" class="help-block">{{authError}}</span>
+                                        </div>
                                         <form [formGroup]="loginForm">
                                             <div class="form-group mb-3">
                                                 <label>User Name</label>
