--- a/src/app/auth/login/login.component.less
+++ b/src/app/auth/login/login.component.less
@@ -1,5 +1,5 @@
 .login-reg{
-	min-height: 93vh;
+	min-height: 90vh;
 	
 }
 .login-reg-container{
@@ -80,4 +80,7 @@
 }
 input.ng-invalid.ng-touched{
     border: 1px solid red;
+}
+.textcenter{
+    text-align: center;
 }
