Added deploymets list from backend

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -70,7 +70,7 @@
         .management{
             background-position: 0 -216px;
         }
-        .security{
+        .audit{
              background-position: 0 -250px;
         }
         .setup{
@@ -178,4 +178,87 @@ a, .btn, button, .content_section, .data_list{
 }
 .maindiv{
     padding: 0px;
+}
+//Added by meera
+.p-3 > .tab-pane{
+	border-radius: 3px;
+}
+.table{
+	font-family: 'Open Sans', sans-serif;
+}
+.table-outline{
+	border: 1px solid #e5e7e8;
+}
+.table-pet-service{
+	font-size: 13px;
+}
+.table-sm-text{
+	font-size: 13px;
+}
+.table-pet-service th, .table-pet-service td{
+	padding: 8px 4px;
+}
+.table-pet-service th{
+	border: none !important;
+}
+.table-pet-service th:first-child, .table-pet-service td:first-child{
+	text-align: left;
+}
+.table-no-bordered td{
+	border: none;
+}
+.table-font-weight-600 td{
+	font-weight: 600;
+}
+.not-attempt td{
+	background: #dee2e6;
+}
+.table-avenir td{
+	font-family: 'Avenir Book';
+	font-weight: normal;
+}
+.table-avenir .active-service td{
+	font-family: 'Avenir';
+	font-weight: 600;
+}	
+.not-attempt-text{
+	color: #999;
+}
+.mb-form-db{
+	border-bottom: 1px #e7e7e7 solid;
+	padding: 1rem 1rem 0.6rem;
+}
+.toolpills {
+    div{
+        -ms-text-overflow: ellipsis;
+        border: 1px #e6e6e6 solid;
+        padding: 3px 18px 3px 5px;
+        text-overflow: ellipsis;
+        text-decoration: none;
+        display: inline-block;
+        background: #f7f9f8;
+        white-space: nowrap;
+        border-radius: 2px;
+        position: relative;
+        overflow: hidden;
+        max-width: 200px;
+        font-size: 12px;
+        color: #9b9b9b;
+    }
+}
+.toolpills div span{
+	color: #323232;
+}
+.toolpills div span.close{
+	position: absolute;
+	cursor: pointer;
+	font-size: 15px;
+	color: #d3d7d8;
+	margin: auto;
+	float: none;
+	height: 10px;
+	opacity: 1;
+	right: 3px;
+	bottom: 0;
+	top: -2px;
 }
