feture/Audit: Changes related to date transforation and pagination

--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -59,3 +59,9 @@
 	border-bottom: 1px #e7e7e7 solid;
 	padding: 1rem 1rem 0.6rem;
 }
+.container{
+	min-width: max-content;
+}
+li{
+	cursor: pointer;
+}
