--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -132,3 +132,13 @@
 	font-size: 14px;
 	min-width: 100%;
 }
+.help-block{
+    color: red;
+}
+input.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
+.formarray_btn{
+	font-size: x-large;
+	color: #6c757d
+}
